--- a/form.html
+++ b/form.html
@@ -43,7 +43,7 @@
 </br>
 <label for="password">Password</label></br></br>
 <input email="email" placeholder="Enter email" type="text and numbers" input="required"></br></br>
-<button type="submit" a href="table.html">Submit</button>
+<button type="submit"> <a href="table.html">Submit</a></button>
 </form>
     
 </body>
