--- a/form.html
+++ b/form.html
@@ -3,34 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Html Corrections</title>
-    <style>
-        #forms{
-            width: 10px;
-            padding: 50px;
-            margin: 20px;
-            align-items: center;
-            text-align: center;
-        }
-        .input{
-            font-size: medium;
-            margin: 20px;
-            width: 10px;
-            padding: 50px;
-            align-items: center;
-            text-align: center;
-        }
-        .button{
-            width: 10px;
-            padding: 50px;
-            margin: 20px;
-            background-color: blue;
-            
-        }
-    </style>
+    <title>Html Assignment</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form id="form">
+    <div id="form">
 <h2>Don't have an account <a href="index.html">Sign Up</a></h2>
     <h1>Sign In</h1>
     <label for="name">Name</label></br></br>
@@ -44,7 +21,7 @@
 <label for="password">Password</label></br></br>
 <input email="email" placeholder="Enter email" type="text and numbers" input="required"></br></br>
 <button type="submit"> <a href="table.html">Submit</a></button>
-</form>
+</div>
     
 </body>
 </html>
