--- a/index.html
+++ b/index.html
@@ -3,34 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Html Corrections</title>
-    <style>
-        #forms{
-            width: 60%;
-            margin: 100 auto;
-            padding: 80;
-            text-align: center;
-            border: 5px solid;
-            align-items: center;
-
-        }
-        .input{
-            padding-left: 20px 30px;
-            border-radius: 30px;
-            border: 5px double; color: aqua;
-            text-align: center;
-        }
-        button{
-            padding: 20px;
-            margin: 5 auto;
-            width: 20%;
-            background-color:blue;
-        }
-    </style>
+    <title>Html Assignment</title>
+    ,<link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <form id="form">
-        <h5>Already Have an Account? <a href="form.html">Sign In</a></h5>
+    <div id="form">
+        <h5>Already Have an Account?> <a href="form.html">Sign In</a></h5>
         <h1>Sign Up</h1>
         <label for="name">Name:</label></br></br>
         <input name="name" placeholder="Enter name" type="text" input="required">
@@ -48,20 +26,20 @@
 <label>I have read and agree to our terms of privancy</label>
 </br>
 </br>
- <button type="submit"> <a href="form.html">Submit</a></button>
+ <button type="submit"><a href="form.html">Submit</a></button>
 </br>
 </br>
 <b>__________________________________Or Sign Up With_________________________________</b>
 </br>
 </br>
-<img src="google.jpg" alt="icon of google" >
+<img src="google.jpg" alt="icon of google" style="width: 90px; height: 90px;" >
 
-<img src="Facebook_icon.svg.webp" alt="icon of facebook" style="width: 200px; height: 200px;">
+<img src="Facebook_icon.svg.webp" alt="icon of facebook" style="width: 60px; height: 60px;">
  
 
 
 
-    </form>
+</divmargin >
     
 </body>
 </html>
