--- a/table.html
+++ b/table.html
@@ -3,30 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>html corrections</title>
-    <style>
-        #table{
-            width: 10px;
-            padding: 80px;
-            margin: 20px;
-            text-align: center;
-            align-items: center;
-            border-collapse: collapse;
-        }
-        .td,th{
-            font-size: medium;
-            padding: 20px;
-            margin: 80px;
-            width: 10px;
-            text-align: left;
-        }
-        
-        tr:nth-child(even){
-        background-color: aqua;
-        }
-    </style>
+    <title>html Assignment</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="table">
     <h1>Html table</h1>
     <table>
         <th>First Name</th>
@@ -58,7 +39,32 @@
         <td>Prossy</td>
         <td>prossykawala@gmail.com</td>
     </tr>
+    <tr>
+        <td>Daniella</td>
+        <td>Danis</td>
+        <td>danielladanis@gmail.com</td>
+    </tr>
+    <tr>
+        <td>Turyagumanawe</td>
+        <td>Elijah</td>
+        <td>elijahturyagumanawe@gmail.com</td>
+    </tr>
+    <tr>
+        <td>Canary</td>
+        <td>Mugume</td>
+        <td>canarymugume@gmail.com</td>
+    </tr>
+    <tr>
+        <td>Norah</td>
+        <td>Barbs</td>
+        <td>barbsnorah@gmail.com</td>
+    </tr>
+    <tr>
+        <td>George</td>
+        <td>Ray</td>
+        <td>georgeray@gmail.com</td>
+    </tr>
     </table>
-    
+    </div>
 </body>
 </html>
